Config: add community updates config provider
Add initial config schema for Community updates
homepage module.

Use the Provider_initListHook to only register the provider
if GECommunityUpdatesEnabled flag is set to true. This will
allow to use the provider in Beta and keep it  "unregistered"
in other wikis.

Bug: T367223
Depends-On: I6d640ead2d27a68091a4f8776d5f6634cc8b7d6f
Change-Id: Ia757d6b3e8c571dfd09d5d6727ca91d34c155f49

--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -114,6 +114,14 @@
 	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Description of trying suggested edits notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-keep-going-notification-title": "Subheader in Special:EditGrowthConfig. \"Keep going\" should be consistent with {{msg-mw|Growthexperiments-levelingup-keepgoing-notification-header}}.\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-keep-going-notification-description": "Description of keep going notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"communityconfiguration-communityupdates-description": "Description of the Community configuration editor form for the Community updates homepage module",
+	"communityconfiguration-communityupdates-info-text": "The message describes that the Community updates module is a feature available in the newcomer homepage, and it serves to discover initiatives relevant for newcomers.",
+	"communityconfiguration-communityupdates-title": "Headline of the Community configuration editor form for the Community updates homepage module",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesenabled-control-label": "Label for the Community updates module enabling checkbox",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-label": "Label for the Community updates module field setting the title content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-help-text": "Label for the Community updates module field help text setting the title content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Label for the Community updates module field setting the body content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-help-text": "Label for the Community updates module field help text setting the body content text",
 	"communityconfiguration-helppanel-title": "Headline of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-description": "Description of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-info-text": "The message describes that the Help panel is a feature available in any namespace, both in reading and edit mode. It provides useful functionality, including search for help, clickable help links, and the ability to ask questions to mentors or the help desk. The panel displays links which can be configured to point to any relevant wiki pages.\n\nThe words \"view more\" are a shortened form of {{msg-mw|Growthexperiments-help-panel-editing-help-links-widget-view-more-link}}.",
