--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -101,6 +101,14 @@
 	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Maximum number of edits a newcomer can have to qualify for receiving this notification. If set to 0, no newcomers </br> will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have not completed Suggested edits.",
 	"growthexperiments-edit-config-keep-going-notification-title": "Keep going notification",
 	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
+	"communityconfiguration-communityupdates-description": "Share important community news, campaigns, events, or WikiProjects on the newcomer homepage.",
+	"communityconfiguration-communityupdates-info-text": "This [[mw:Special:MyLanguage/Growth/Community_Updates|Community Updates]] module will display on the homepage and should be used to share important community news, campaigns, events, or WikiProjects. Priority should be given to updates that support the [https://meta.wikimedia.org/wiki/Movement_Strategy/Recommendations/Identify_Topics_for_Impact#Changes_and_Actions|2030 Movement strategy’s “Topics for Impact”] recommendation.",
+	"communityconfiguration-communityupdates-title": "Community updates",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesenabled-control-label": "Turned on",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-label": "Title",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-help-text": "A short title that best represents the campaign, project, event, or community initiative that is being highlighted.",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Body text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-help-text": "A short and friendly informational message to spark interest.",
 	"communityconfiguration-helppanel-title": "Help panel",
 	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
 	"communityconfiguration-helppanel-info-text": "The help panel can be available in any namespace, in reading or edit mode, as configured below. It includes the ability to search for help, click help links, and ask questions to either mentors or to the help desk. Links can be configured to be any links in the wiki, but recommendations are included below.",
