Homepage: don't show edit count in mobile no structured tasks fallback
Actually getting the edit count from the API is a very high performance
overhead that recently got much worse and was the main source of latency
for the homepage (see T368405).

This change does the first step by changing the text to longer contain
the edit count as defined in the task, This change focusses on being
small and quickly mergable.

Follow-up changes will include adjusting the image, removing the now
unused code to get the edit count from the Analytics Query Service, and
add tracking.

Bug: T368750
Change-Id: Ic4053819d0387a2af3fdfff2c6b873c4f4761d99

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -216,7 +216,8 @@
 	"growthexperiments-homepage-suggestededits-footer-megasuffix": "$1M",
 	"growthexperiments-homepage-suggestededits-footer-gigasuffix": "$1B",
 	"growthexperiments-homepage-suggestededits-footer-terasuffix": "$1T",
-	"growthexperiments-homepage-suggestededits-mobilesummary-metricssubtitle": "{{PLURAL:$1|edit|edits}} in the last day",
+	"growthexperiments-homepage-suggestededits-mobilesummary-notasks-title": "Currently no structured tasks available.",
+	"growthexperiments-homepage-suggestededits-mobilesummary-notasks-subtitle": "Try selecting more topics and task-types or check back later.",
 	"growthexperiments-homepage-suggestededits-mobilesummary-footer": "Volunteers like you have contributed to improving {{SITENAME}} today. Join in!",
 	"growthexperiments-homepage-suggestededits-mobilesummary-footer-button": "See all suggestions",
 	"growthexperiments-homepage-suggestededits-tasktype-shortdescription-copyedit": "Fix spelling, grammar, and tone",
