i18n: Clarify units for Personalized praise notifications frequency
Bug: T368819
Change-Id: I5446ef38d7b3c2ba32230a5b6cca9a1e1d14e45f

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -61,7 +61,7 @@
 	"growthexperiments-edit-config-personalized-praise": "Personalized praise",
 	"growthexperiments-edit-config-personalized-praise-description": "Receiving encouraging messages from established editors can improve new editor retention. The Personalized praise module surfaces praiseworthy new editors to their mentor, to help productive new editors feel more engaged and involved in the community.",
 	"growthexperiments-edit-config-personalized-praise-mentors-can-change": "Mentors can change this option for their own user in the Mentor dashboard.",
-	"growthexperiments-edit-config-personalized-praise-notification-frequency": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully?",
+	"growthexperiments-edit-config-personalized-praise-notification-frequency": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully [in hours]?",
 	"growthexperiments-edit-config-personalized-praise-min-edits": "Default minimum number of edits a mentee must have to be praiseworthy",
 	"growthexperiments-edit-config-personalized-praise-days": "Number of days that are considered when evaluating mentee's praiseworthiness",
 	"growthexperiments-edit-config-personalized-praise-max-edits": "Maximum number of edits an user can have to be considered praiseworthy",
@@ -131,7 +131,7 @@
 	"communityconfiguration-mentorship-gementorshipminimumeditcount-label": "Minimum number of edits a user must have made (on any namespace) to sign up as a mentor",
 	"communityconfiguration-mentorship-gepersonalizedpraisedays-label": "Number of days that are considered when evaluating mentee's praiseworthiness",
 	"communityconfiguration-mentorship-gepersonalizedpraisedays-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
-	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-label": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully?",
+	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-label": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully [in hours]?",
 	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
 	"communityconfiguration-mentorship-gepersonalizedpraisemaxedits-label": "Maximum number of edits an user can have to be considered praiseworthy",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Default minimum number of edits a mentee must have to be praiseworthy",
