CommunityUpdates: add call to action button
This change implements a configurable call-to-action button for the
Community Updates module on the Newcomer homepage. It allows
wiki communities to customize both the destination page and the
button text. Restricted to internal wiki links.

Bug: T365880
Bug: T370376
Change-Id: Ia0894fc8d0e3d08b46249ca8d7285c69cf3f7f58

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -629,5 +629,6 @@
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Make a suggested edit",
 	"echo-category-title-ge-newcomer": "Growth features",
 	"echo-pref-tooltip-ge-newcomer": "Notify me about tasks for newcomers and other features designed to help new users.",
-	"growthexperiments-homepage-community-updates-header": "Community Updates"
+	"growthexperiments-homepage-community-updates-header": "Community Updates",
+	"growthexperiments-homepage-communityupdates-calltoaction-button": "Learn more"
 }
