--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -228,5 +228,8 @@
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-label": "Field label for Suggested Edits in Community configuration. \"Underlinked\" means that an article doesn't have enough links.",
 	"communityconfiguration-growthsuggestededits-link_recommendation-underlinkedweight-help-text": "Help text for Suggested Edits in Community configuration.",
 	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-label": "Field label for Suggested Edits in Community configuration",
-	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Help text for Suggested Edits in Community configuration."
+	"communityconfiguration-growthsuggestededits-link_recommendation-minimumlinkscore-help-text": "Help text for Suggested Edits in Community configuration.",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescalltoaction-label": "Field label for Call to action in Community configuration",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescalltoaction-pagetitle-label": "Label for the destination page link field in the Community Updates configuration form.",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescalltoaction-buttontext-label": "Label for the call to action button text field in the Community Updates configuration form."
 }
