--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -119,9 +119,9 @@
 	"communityconfiguration-communityupdates-title": "Headline of the Community configuration editor form for the Community updates homepage module",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatesenabled-control-label": "Label for the Community updates module enabling checkbox",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-label": "Label for the Community updates module field setting the title content text",
-	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-help-text": "Label for the Community updates module field help text setting the title content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-description": "Label for the Community updates module field description setting the title content text",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Label for the Community updates module field setting the body content text",
-	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-help-text": "Label for the Community updates module field help text setting the body content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-description": "Label for the Community updates module field description setting the body content text",
 	"communityconfiguration-helppanel-title": "Headline of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-description": "Description of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-info-text": "The message describes that the Help panel is a feature available in any namespace, both in reading and edit mode. It provides useful functionality, including search for help, clickable help links, and the ability to ask questions to mentors or the help desk. The panel displays links which can be configured to point to any relevant wiki pages.\n\nThe words \"view more\" are a shortened form of {{msg-mw|Growthexperiments-help-panel-editing-help-links-widget-view-more-link}}.",
