--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -109,6 +109,7 @@
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-description": "A short title that best represents the campaign, project, event, or community initiative that is being highlighted.",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Body text",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-description": "A short and friendly informational message to spark interest.",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesminedits-label": "Minimum number of edits a user must have to be shown this banner",
 	"communityconfiguration-helppanel-title": "Help panel",
 	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
 	"communityconfiguration-helppanel-info-text": "The help panel can be available in any namespace, in reading or edit mode, as configured below. It includes the ability to search for help, click help links, and ask questions to either mentors or to the help desk. Links can be configured to be any links in the wiki, but recommendations are included below.",
