--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -122,6 +122,7 @@
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontenttitle-description": "Label for the Community updates module field description setting the title content text",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Label for the Community updates module field setting the body content text",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-description": "Label for the Community updates module field description setting the body content text",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesminedits-label": "Label for the Community updates module field setting the minimum number of edits a user must have to be shown the Community updates banner",
 	"communityconfiguration-helppanel-title": "Headline of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-description": "Description of the Community configuration module for the help panel",
 	"communityconfiguration-helppanel-info-text": "The message describes that the Help panel is a feature available in any namespace, both in reading and edit mode. It provides useful functionality, including search for help, clickable help links, and the ability to ask questions to mentors or the help desk. The panel displays links which can be configured to point to any relevant wiki pages.\n\nThe words \"view more\" are a shortened form of {{msg-mw|Growthexperiments-help-panel-editing-help-links-widget-view-more-link}}.",
