Community updates: add image to the config schema
Bug: T365885
Depends-On: I11ffcb836b88e84e3329d33f3dd196dd19eb1307
Change-Id: Id3177a881b64beede1daeb822a5e610537ecadbf

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -110,6 +110,8 @@
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-label": "Body text",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatescontentbody-description": "A short and friendly informational message to spark interest.",
 	"communityconfiguration-communityupdates-gehomepagecommunityupdatesminedits-label": "Minimum number of edits a user must have to be shown this banner",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesthumbnailfile-label": "Image",
+	"communityconfiguration-communityupdates-gehomepagecommunityupdatesthumbnailfile-description": "Choose an appropriate image that relates to the event or initiative you want to highlight, e.g. a logo.",
 	"communityconfiguration-helppanel-title": "Help panel",
 	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
 	"communityconfiguration-helppanel-info-text": "The help panel can be available in any namespace, in reading or edit mode, as configured below. It includes the ability to search for help, click help links, and ask questions to either mentors or to the help desk. Links can be configured to be any links in the wiki, but recommendations are included below.",
