i18n: Adjust link on NewcomerTasksInfo to point to CommunityConfiguration
Now that all wikis have been migrated, there is no need to do this in a
backwards-compatible way.

Bug: T366577
Change-Id: I58e9abcf2b18f4d4eb8e741f99ca938d520e7631

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -452,7 +452,7 @@
 	"grant-managementorship": "Manage mentorship",
 	"newcomertasksinfo": "Newcomer Tasks",
 	"newcomertasksinfo-no-data": "No data is available.",
-	"newcomertasksinfo-config-form-info": "Configuration of newcomer tasks can be viewed and changed at [[Special:EditGrowthConfig]].",
+	"newcomertasksinfo-config-form-info": "Configuration of newcomer tasks can be viewed and changed at [[Special:CommunityConfiguration/GrowthSuggestedEdits]].",
 	"newcomertasksinfo-task-count": "$1",
 	"newcomertasksinfo-table-header-task-type": "Task type",
 	"newcomertasksinfo-table-header-task-type-id": "ID",
