Allow admins to enroll other users as mentors
Bug: T372118
Change-Id: I580948ea578bfd5e07558ec2650b7d15a6c921ec

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -182,7 +182,7 @@
 	"growthexperiments-manage-mentors-pretext-regular": "Administrators can remove mentors that violate community standards or policies. They can also edit their mentorship-related options, such as their introduction message.",
 	"growthexperiments-manage-mentors-pretext-stored-at": "The list of mentors is stored in [[$1|MediaWiki namespace]], including history.",
 	"growthexperiments-manage-mentors-pretext-to-enroll": "To enroll as a mentor, go to [[Special:EnrollAsMentor]].",
-	"growthexperiments-manage-mentors-error-no-such-user": "Error: No such user with ID of $1 exists. This is probably an internal error.",
+	"growthexperiments-manage-mentors-error-no-such-user": "Error: No such user with the specified user ID exists. This is probably an internal error.",
 	"growthexperiments-manage-mentors-auto-assigned": "Mentors automatically assigned to new accounts",
 	"growthexperiments-manage-mentors-auto-assigned-text": "When a newcomer registers their {{SITENAME}} account, one of the following users is automatically assigned as their mentor.",
 	"growthexperiments-manage-mentors-manually-assigned": "Mentors who manually select their mentees",
@@ -208,6 +208,11 @@
 	"growthexperiments-manage-mentors-remove-mentor-pretext": "{{GENDER:|You}} are about to remove [[User:$1|$1]] as a {{GENDER:$1|mentor}}.",
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Reason for removing the mentor",
 	"growthexperiments-manage-mentors-remove-mentor-success": "User [[User:$1|$1]] is no longer a {{GENDER:$1|mentor}}.",
+	"growhtexperiments-manage-mentors-add-mentor": "Enroll a mentor",
+	"growthexperiments-manage-mentors-add-mentor-pretext": "Using this form, it is possible to add a new mentor to the system. The added user does not need to meet the eligibility criteria. They are added as a manually assigned mentor, and they are able to change their own settings.",
+	"growthexperiments-manage-mentors-add-mentor-username": "Username of the mentor to add",
+	"growthexperiments-manage-mentors-add-mentor-reason": "Reason for adding the mentor",
+	"growthexperiments-manage-mentors-add-mentor-success": "{{GENDER:$1|User}} $1 was added as a mentor.",
 	"growthexperiments-manage-mentors-return-back": "You can [[Special:ManageMentors|return back]] to the list of mentors.",
 	"growthexperiments-manage-mentors-summary-add-admin-no-reason": "Adding $1 as a mentor",
 	"growthexperiments-manage-mentors-summary-add-admin-with-reason": "Adding $1 as a mentor: $2",
