--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -215,6 +215,11 @@
 	"growthexperiments-manage-mentors-remove-mentor-pretext": "Header of mentor removal form in Special:ManageMentors",
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Label in mentor removal form in Special:ManageMentors",
 	"growthexperiments-manage-mentors-remove-mentor-success": "Success message shown after a mentor is successfully removed via Special:ManageMentors.",
+	"growhtexperiments-manage-mentors-add-mentor": "Button label in Special:ManageMentors",
+	"growthexperiments-manage-mentors-add-mentor-pretext": "Header of the mentor addition form in Special:ManageMentors",
+	"growthexperiments-manage-mentors-add-mentor-username": "Label in add a mentor form in Special:ManageMentors",
+	"growthexperiments-manage-mentors-add-mentor-reason": "Label in add a mentor form in Special:ManageMentors",
+	"growthexperiments-manage-mentors-add-mentor-success": "Success message shown after a mentor is successfully added via Special:ManageMentors.\n\nParameters:\n* $1 - username of the new mentor",
 	"growthexperiments-manage-mentors-return-back": "Link back to Special:ManageMentors. Shown after a write action (eg. removal of a mentor) is successfully submitted via Special:ManageMentors.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-manage-mentors-summary-add-admin-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is added by an admin\n\nParameters:\n* $1 - mentor's name",
 	"growthexperiments-manage-mentors-summary-add-admin-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is added by an admin\n\nParameters:\n* $1 - mentor's name\n* $2 - reason provided by the admin",
