MenteeOverview: Fail visibly on errors
The patch adds an error screen to the MenteeOverview
module, which notifies users when an unexpected error
occured when fetching the list of mentees.

Bug: T372185
Change-Id: I990c01b644443af908c4513e0c3656afbae6f613

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -50,6 +50,9 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change {{GENDER:|your}} filters to find mentees.",
 	"growthexperiments-mentor-dashboard-mentee-overview-recent-edits-headline": "Recent changes by {{GENDER:|your}} mentees",
 	"growthexperiments-mentor-dashboard-mentee-overview-recent-edits-text": "{{GENDER:|You}} can view the edits made by all {{GENDER:|your}} mentees by visiting this [$1 filtered view of Recent Changes].",
+	"growthexperiments-mentor-dashboard-mentee-overview-error-title": "An unknown error happened when loading the list of mentees",
+	"growthexperiments-mentor-dashboard-mentee-overview-error-description": "If this persists, please report it as an error to the developers.",
+	"growthexperiments-mentor-dashboard-mentee-overview-error-notification": "Unknown error occured. Please try again later.",
 	"growthexperiments-mentor-dashboard-resources-headline": "Resources",
 	"growthexperiments-mentor-dashboard-resources-link-manage-mentors": "Manage mentors",
 	"growthexperiments-mentor-dashboard-resources-link-view-mentor-list": "View the list of mentors",
