[i18n] ManageMentors: Clarify headlines
Per conversations happening at Wikimania 2024,
Special:ManageMentors headlines are challenging
to understand. This patch clarifies them per Benoit's
request in the associated task.

Bug: T372154
Change-Id: I7e3c801a51b3daf6a5b1a5ecfede0881198e675e

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -180,10 +180,10 @@
 	"growthexperiments-manage-mentors-pretext-stored-at": "The list of mentors is stored in [[$1|MediaWiki namespace]], including history.",
 	"growthexperiments-manage-mentors-pretext-to-enroll": "To enroll as a mentor, go to [[Special:EnrollAsMentor]].",
 	"growthexperiments-manage-mentors-error-no-such-user": "Error: No such user with ID of $1 exists. This is probably an internal error.",
-	"growthexperiments-manage-mentors-auto-assigned": "Automatically assigned mentors",
-	"growthexperiments-manage-mentors-auto-assigned-text": "New accounts are randomly assigned to these mentors.",
-	"growthexperiments-manage-mentors-manually-assigned": "Manually assigned mentors",
-	"growthexperiments-manage-mentors-manually-assigned-text": "New accounts are not randomly assigned to these mentors. Like other mentors, these mentors can manually select the accounts they would like to mentor. This section is mainly for workshop hosts who just want to mentor people they met.",
+	"growthexperiments-manage-mentors-auto-assigned": "Mentors automatically assigned to new accounts",
+	"growthexperiments-manage-mentors-auto-assigned-text": "When a newcomer registers their {{SITENAME}} account, one of the following users is automatically assigned as their mentor.",
+	"growthexperiments-manage-mentors-manually-assigned": "Mentors who manually select their mentees",
+	"growthexperiments-manage-mentors-manually-assigned-text": "New accounts aren’t automatically assigned to these mentors. This list of mentors will only mentor accounts they personally select, making this feature ideal for workshop hosts who wish to continue mentoring participants.",
 	"growthexperiments-manage-mentors-none": "None",
 	"growthexperiments-manage-mentors-username": "Username",
 	"growthexperiments-manage-mentors-last-active": "Last active",
